--- a/pomodoro.html
+++ b/pomodoro.html
@@ -12,5 +12,5 @@
           <section id="pendingTime"></section>
     </body>
     <!--is placed at the end to load -->
-    <script src='scripts/htmlEvents.js'></script>
+    <script src='scripts/pomodoro.js'></script>
 </html>
