--- a/pomodoro.html
+++ b/pomodoro.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script src="scripts/timer/timer.js"></script>
+        <script src="scripts/tasks/tasks.js"></script>
     </head>
     <body>
         <form id="taskform" name="taskform" oninput="tasknumminutes.value=taskminutes.value">
@@ -10,6 +11,7 @@
           </form>
 
           <section id="pendingTime"></section>
+          <section id="tasks"></section>
     </body>
     <!--is placed at the end to load -->
     <script src='scripts/pomodoro.js'></script>
